[package]
name = "galvanize"
version = "0.0.1"
authors = ["Esteban Küber <esteban@kuber.com.ar>"]
description = "Pure Rust CDB library."
repository = "https://github.com/estebank/galvanize"
readme = "README.md"
license = "MIT"
exclude = [
  '*.cdb',
  'tests/*.cdb',
]

[lib]
name = "galvanize"
path = "src/lib.rs"

[dependencies]
rustc-serialize = "0.3"
